--- a/html_to_sheets/rsvp.html
+++ b/html_to_sheets/rsvp.html
@@ -6,7 +6,7 @@
   
       <div>
         <label>Name</label>
-        <input type="text" name="name" placeholder="Rachel">
+        <input type="text" name="name" placeholder="Full Name">
       </div>
       <br>
       
@@ -19,7 +19,7 @@
 
       <div>
         <label>Number of people in your party (including you)</label>
-        <input type="text" name="church_pax" placeholder="3">
+        <input type="text" name="church_pax" placeholder="Number">
       </div>
       <br>
       
@@ -32,7 +32,7 @@
 
       <div>
         <label>Number of people in your party (including you)</label>
-        <input type="text" name="dinner_pax" placeholder="3">
+        <input type="text" name="dinner_pax" placeholder="Number">
       </div>
       <br>
 
