--- a/html_to_sheets/rsvp.html
+++ b/html_to_sheets/rsvp.html
@@ -5,7 +5,7 @@
     <form id="test-form">
   
       <div>
-        <label>Name</label>
+        <label>Full Name</label>
         <input type="text" name="name" placeholder="Full Name">
       </div>
       <br>
@@ -19,7 +19,7 @@
 
       <div>
         <label>Number of people in your party (including you)</label>
-        <input type="text" name="church_pax" placeholder="Number">
+        <input type="text" name="church_pax" placeholder="Type a number">
       </div>
       <br>
       
@@ -32,13 +32,13 @@
 
       <div>
         <label>Number of people in your party (including you)</label>
-        <input type="text" name="dinner_pax" placeholder="Number">
+        <input type="text" name="dinner_pax" placeholder="Type a number">
       </div>
       <br>
 
       <div>
         <label>Any other comments/dietary requirements we should know?</label>
-        <input type="textarea" name="comments">
+        <input type="text" name="comments">
       </div>
     
       <div>
