only allow correct types

--- a/html_to_sheets/rsvp.html
+++ b/html_to_sheets/rsvp.html
@@ -19,7 +19,7 @@
 
       <div>
         <label>Number of people in your party (including you)</label>
-        <input type="text" name="church_pax" placeholder="Type a number">
+        <input type="number" name="church_pax" placeholder="Type a number">
       </div>
       <br>
       
@@ -32,7 +32,7 @@
 
       <div>
         <label>Number of people in your party (including you)</label>
-        <input type="text" name="dinner_pax" placeholder="Type a number">
+        <input type="number" name="dinner_pax" placeholder="Type a number">
       </div>
       <br>
 
